--- a/ant/Examples/manual.sty
+++ b/ant/Examples/manual.sty
@@ -1,35 +1,6 @@
 % style file for the manual
 
-% fonts
-
-% Comment out the following three lines if these fonts are not available on your system:
-
-%\definecommand\FontFamilyRoman{FontSite Basel}
-%\definecommand\FontFamilySans{FontSite URW Grotesk OSF}
-%\definecommand\FontFamilyTypewriter{FontSite URW Grotesk LF}
-
-%\declarefont{fbar8t} {T1}{FontSite Basel}          {medium}{normal}    {-}{}
-%\declarefont{fbari8t}{T1}{FontSite Basel}          {medium}{italic}    {-}{}
-%\declarefont{fbab8t} {T1}{FontSite Basel}          {bold}  {normal}    {-}{}
-%\declarefont{fbabi8t}{T1}{FontSite Basel}          {bold}  {italic}    {-}{}
-%\declarefont{fgqr9e} {T1}{FontSite URW Grotesk LF} {medium}{normal}    {-}{}
-%\declarefont{fgqri9e}{T1}{FontSite URW Grotesk LF} {medium}{italic}    {-}{}
-%\declarefont{fgqrc9e}{T1}{FontSite URW Grotesk LF} {medium}{small caps}{-}{}
-%\declarefont{fgqb9e} {T1}{FontSite URW Grotesk LF} {bold}  {normal}    {-}{}
-%\declarefont{fgqbi9e}{T1}{FontSite URW Grotesk LF} {bold}  {italic}    {-}{}
-%\declarefont{fgqbc9e}{T1}{FontSite URW Grotesk LF} {bold}  {small caps}{-}{}
-%\declarefont{fgqh9e} {T1}{FontSite URW Grotesk LF} {heavy} {normal}    {-}{}
-%\declarefont{fgqhi9e}{T1}{FontSite URW Grotesk LF} {heavy} {italic}    {-}{}
-%\declarefont{fgqr9d} {T1}{FontSite URW Grotesk OSF}{medium}{normal}    {-}{}
-%\declarefont{fgqri9d}{T1}{FontSite URW Grotesk OSF}{medium}{italic}    {-}{}
-%\declarefont{fgqrc9d}{T1}{FontSite URW Grotesk OSF}{medium}{small caps}{-}{}
-%\declarefont{fgqb9d} {T1}{FontSite URW Grotesk OSF}{bold}  {normal}    {-}{}
-%\declarefont{fgqbi9d}{T1}{FontSite URW Grotesk OSF}{bold}  {italic}    {-}{}
-%\declarefont{fgqbc9d}{T1}{FontSite URW Grotesk OSF}{bold}  {small caps}{-}{}
-%\declarefont{fgqh9d} {T1}{FontSite URW Grotesk OSF}{heavy} {normal}    {-}{}
-%\declarefont{fgqhi9d}{T1}{FontSite URW Grotesk OSF}{heavy} {italic}    {-}{}
-%
-%\rmfamily
+\include{allib.ant}
 
 % skips
 
@@ -219,6 +190,136 @@
 
 % page layout
 
+\beginALdeclarations
+
+;; page sizes
+
+get_page_size A_3       := (297mm, 420mm);
+get_page_size A_4       := (210mm, 297mm);
+get_page_size A_5       := (148mm, 210mm);
+get_page_size A_6       := (105mm, 148mm);
+get_page_size B_3       := (353mm, 500mm);
+get_page_size B_4       := (250mm, 353mm);
+get_page_size B_5       := (176mm, 250mm);
+get_page_size B_6       := (125mm, 176mm);
+get_page_size Letter    := (8.5in, 11in);
+get_page_size Legal     := (8.5in, 14in);
+get_page_size Executive := (7.25in, 10.5in);
+
+;; predefined layouts
+
+simple_page_layout page_size division baseline :=
+  local begin
+    (paper_width, paper_height) := get_page_size A_4;
+    margin_width  := paper_width / division;
+    margin_height := paper_height / division;
+    text_width    := paper_width  - 3 margin_width;
+    text_height   := paper_height - 3 margin_height;
+    main_galley_params :=
+      { Name       := "main"
+      | TopSkip    := 1em
+      | BottomSkip := 1em
+      | MinSize    := 5em
+      | GridSize   := baseline
+      }
+  end
+  begin
+    ps_new_galley "main" text_width >>
+
+    ps_new_page_layout "right" paper_width paper_height >>
+
+    ps_new_area "text block"
+      margin_width margin_height
+      text_width text_height 10pt 3pt
+      Galley main_galley_params >>
+    ps_new_area "head"
+      margin_width (margin_height - baseline)
+      text_width 0pt 10pt 4pt
+      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\therhead}" >>
+    ps_new_area "foot"
+      margin_width (margin_height + text_height + baseline)
+      text_width 0pt 10pt 4pt
+      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\therfoot}" >>
+
+    ps_new_page_layout "left" paper_width paper_height >>
+
+    ps_new_area "text block"
+      (2margin_width) margin_height
+      text_width text_height 10pt 3pt
+      Galley main_galley_params >>
+    ps_new_area "head"
+      (2margin_width) (margin_height - baseline)
+      text_width 0pt 10pt 4pt
+      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\thelhead}" >>
+    ps_new_area "foot"
+      (2margin_width) (margin_height + text_height + baseline)
+      text_width 0pt 10pt 4pt
+      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\thelfoot}"
+  end;
+
+two_column_page_layout page_size division baseline :=
+  local begin
+    (paper_width, paper_height) := get_page_size A_4;
+    margin_width  := paper_width / division;
+    margin_height := paper_height / division;
+    text_width    := paper_width  - 3 margin_width;
+    text_height   := paper_height - 3 margin_height;
+    column_sep    := 1cm;
+    column_height := text_height;
+    column_width  := _;
+    main_galley_params :=
+      { Name       := "main"
+      | TopSkip    := 1em
+      | BottomSkip := 1em
+      | MinSize    := 5em
+      | GridSize   := baseline
+      }
+  end
+  begin
+    2column_width + column_sep = text_width,
+
+    ps_new_galley "main" text_width >>
+
+    ps_new_page_layout "right" paper_width paper_height >>
+
+    ps_new_area "left column"
+      margin_width margin_height
+      column_width column_height 10pt 3pt
+      Galley main_galley_params >>
+    ps_new_area "right column"
+      (margin_width + column_width + column_sep) margin_height
+      column_width column_height 10pt 3pt
+      Galley main_galley_params >>
+    ps_new_area "head"
+      margin_width (margin_height - baseline)
+      text_width 0pt 10pt 4pt
+      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\therhead}" >>
+    ps_new_area "foot"
+      margin_width (margin_height + text_height + baseline)
+      text_width 0pt 10pt 4pt
+      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\therfoot}" >>
+
+    ps_new_page_layout "left" paper_width paper_height >>
+
+    ps_new_area "left column"
+      (2margin_width) margin_height
+      column_width column_height 10pt 3pt
+      Galley main_galley_params >>
+    ps_new_area "right column"
+      (2margin_width + column_width + column_sep) margin_height
+      column_width column_height 10pt 3pt
+      Galley main_galley_params >>
+    ps_new_area "head"
+      (2margin_width) (margin_height - baseline)
+      text_width 0pt 10pt 4pt
+      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\thelhead}" >>
+    ps_new_area "foot"
+      (2margin_width) (margin_height + text_height + baseline)
+      text_width 0pt 10pt 4pt
+      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\thelfoot}"
+  end;
+\endALdeclarations
+
 \definecommand\therhead{\small\sffamily\red ant \version\hfil\lookupreference{new mark: section}}
 \definecommand\therfoot{\hfil\sffamily\red --- \getcounter{1}{page} ---\hfil}
 \definecommand\thelhead{\small\sffamily\red\lookupreference{new mark: section}\hfil ant \version}
@@ -226,15 +327,11 @@
 
 \definecommand\paperwidth{210mm}
 \definecommand\paperheight{297mm}
-\definecommand\columnsep{1cm}
-\definecommand\columnwidth{(9/12 * \paperwidth - \columnsep) / 2}
-\definecommand\columnheight{7/9 * \paperheight}
 
 \definecommand\setuppagelayout{
   \ALcommand{
-    local
-      paper_width   := 210mm;
-      paper_height  := 297mm;
+    local begin
+      (paper_width, paper_height) := get_page_size A_4;
       column_sep    := 1cm;
       column_height := 7/9paper_height;
       column_width  := _;
@@ -245,18 +342,18 @@
         | MinSize    := 5em
         | GridSize   := 12pt
         }
-    in
+    end
     begin
       2column_width + column_sep = 9/12paper_width,
 
-         ps_new_galley "toc" (70mm)
+         ps_new_galley "toc" 70mm
       >> ps_new_galley "main" column_width
 
       >> ps_new_page_layout "right" paper_width paper_height
 
       >> ps_new_area "float"
            (1/12paper_width) (1/9paper_height)
-           (9/12paper_width) column_height (10pt) (3pt)
+           (9/12paper_width) column_height 10pt 3pt
            Float
            { Alignment  := Top
            | TopSkip    := 1em
@@ -265,7 +362,7 @@
            }
       >> ps_new_area "footnotes"
            (1/6paper_width) (1/9paper_height)
-           (9/12paper_width) column_height (10pt) (3pt)
+           (9/12paper_width) column_height 10pt 3pt
            Footnote
            { TopSkip    := 1em
            | BottomSkip := 1em
@@ -273,20 +370,20 @@
            }
       >> ps_new_area "left column"
            (1/12paper_width) (1/9paper_height)
-           column_width column_height (10pt) (3pt)
+           column_width column_height 10pt 3pt
            Galley main_galley_params
       >> ps_new_area "right column"
            (1/12paper_width + column_width + column_sep) (1/9paper_height)
-           column_width column_height (10pt) (3pt)
+           column_width column_height 10pt 3pt
            Galley main_galley_params
       >> ps_new_area "head"
            (1/12paper_width) (2/27paper_height)
-           (9/12paper_width) (0pt) (10pt) (4pt)
+           (9/12paper_width) 0pt 10pt 4pt
            Direct
            "\\hbox to (9/12*210mm){\\therhead}"
       >> ps_new_area "foot"
            (1/12paper_width) (17/18paper_height)
-           (9/12paper_width) (0pt) (10pt) (4pt)
+           (9/12paper_width) 0pt 10pt 4pt
            Direct
            "\\hbox to (9/12*210mm){\\therfoot}"
 
@@ -294,7 +391,7 @@
 
       >> ps_new_area "float"
            (1/6paper_width) (1/9paper_height)
-           (9/12paper_width) column_height (10pt) (3pt)
+           (9/12paper_width) column_height 10pt 3pt
            Float
            { Alignment  := Top
            | TopSkip    := 1em
@@ -303,7 +400,7 @@
            }
       >> ps_new_area "footnotes"
            (1/6paper_width) (1/9paper_height)
-           (9/12paper_width) column_height (10pt) (3pt)
+           (9/12paper_width) column_height 10pt 3pt
            Footnote
            { TopSkip    := 1em
            | BottomSkip := 1em
@@ -311,20 +408,20 @@
            }
       >> ps_new_area "left column"
            (1/6paper_width) (1/9paper_height)
-           column_width column_height (10pt) (3pt)
+           column_width column_height 10pt 3pt
            Galley main_galley_params
       >> ps_new_area "right column"
            (1/6paper_width + column_width + column_sep) (1/9paper_height)
-           column_width column_height (10pt) (3pt)
+           column_width column_height 10pt 3pt
            Galley main_galley_params
       >> ps_new_area "head"
            (1/6paper_width) (2/27paper_height)
-           (9/12paper_width) (0pt) (10pt) (4pt)
+           (9/12paper_width) 0pt 10pt 4pt
            Direct
            "\\hbox to (9/12*210mm){\\thelhead}"
       >> ps_new_area "foot"
            (1/6paper_width) (17/18paper_height)
-           (9/12paper_width) (0pt) (10pt) (4pt)
+           (9/12paper_width) 0pt 10pt 4pt
            Direct
            "\\hbox to (9/12*210mm){\\thelfoot}"
     end}%
@@ -428,7 +525,8 @@
   \begingroup
   \setparameter{paragraph}{ left-skip = 1.7em; par-indent = -1.7em; par-skip = 1ex }%
   \savecommand\item
-  \definecommand\item[m]{\par{##1}\hskip{0.8em}}}{%
+  \definecommand\item[m]{\par{##1}\hskip{0.8em}}%
+}{%
   \par
   \restorecommand\item
   \vskip{1ex}%
@@ -438,15 +536,16 @@
 \defineenvironment{longdescription}{%
   \par
   \noindent{\red\rule{0pt plus 1fill}{0.6pt}{0pt}}\par
+  \penalty{10000}%
   \vskip{-2em}\hskip{0pt}\par%
   \begingroup
   \setparameter{paragraph}{ left-skip = 1.7em; par-indent = 0em; par-skip = 1ex }%
   \savecommand\item
-  \definecommand\item[m]{\par\ensurevskip{\medskipamount}\hskip{-1.7em}{##1}\par }}{%
+  \definecommand\item[m]{\par\ensurevskip{\medskipamount}\hskip{-1.7em}{##1}\par }%
+}{%
   \par
   \restorecommand\item
   \endgroup
-  \vskip{\medskipamount}%
   \noindent{\red\rule{0pt plus 1fill}{0.6pt}{0pt}}\par
   \vskip{\medskipamount}%
   \noindent}
