--- a/ant/README
+++ b/ant/README
@@ -8,11 +8,11 @@
 
 In order to compile ant you need:
 
- o OCaml version 3.08 (version 3.09.0 is buggy and does not work),
+ o OCaml version 3.09.1,
  o kpathsea version 3.2,
  o FreeType version 2,
  o CamlImages version 2.2,
- o mlgmp version 20021123 (optional).
+ o mlgmp version 0.13 (optional).
 
 (1) You might want to edit the file “Config.mk” to set some paths. In
 particular, the variables KPATHSEA_LDFLAGS and KPATHSEA_CFLAGS probably
@@ -21,7 +21,7 @@ need adjustment.
 (2) You can choose between three number libraries:
 
  o Float: (default) All computations use floating point numbers. This is
-          the fastes option but it might result in rounding errors.
+          the fastest option but it might result in rounding errors.
  o Gmp:   uses the mlgmp library. This gives exact results but it
           slower.
  o Num:   Is similar to Gmp but does not depend on an external library.
