clean up and improve lig/kern handling

--- a/ant/Examples/manual.sty
+++ b/ant/Examples/manual.sty
@@ -63,12 +63,14 @@
 
 % abbreviations for TeX compatibility
 
+\definepattern{'}{\char{0x2019}}    % replace apostrophe with quote
 \definepattern{`}{\char{0x2018}}    % replace grave accent with backquote
 \definepattern{``}{\char{0x201c}}   % replace two grave accents with double left quote
 \definepattern{--}{\char{0x2013}}   % emulate n-dash ligature
 \definepattern{---}{\char{0x2014}}  % emulate m-dash ligature
 \definepattern{‘‘}{\char{0x201c}}   % emulate double-left-quote ligature
 \definepattern{‘‘}{\char{0x201d}}   % emulate double-right-quote ligature
+\definepattern{''}{\char{0x201d}}   % emulate double-right-quote ligature
 
 % colours
 
