--- a/ant/Examples/manual.sty
+++ b/ant/Examples/manual.sty
@@ -1,82 +1,6 @@
 % style file for the manual
 
-% parameters
-
-% skips
-
-\definecommand\,{\hskip{3mu}}
-\definecommand\>{\hskip{4mu plus 2mu minus 4mu}}
-\definecommand\;{\hskip{5mu plus 5mu}}
-\definecommand\!{\hskip{-3mu}}
-\definecommand\?{\hskip{0.125em}}
-
-\definecommand\hss{\hskip{0pt plus 1fil minus 1fil}}
-\definecommand\hfil{\hskip{0pt plus 1fil}}
-\definecommand\hfill{\hskip{0pt plus 1fill}}
-\definecommand\vss{\vskip{0pt plus 1fil minus 1fil}}
-\definecommand\vfil{\vskip{0pt plus 1fil}}
-\definecommand\vfill{\vskip{0pt plus 1fill}}
-
-\definecommand\dotfill{\hleaders{0pt plus 1fill}{\hskip{0.2em}.\hskip{0.2em}}}
-
-\definecommand\quad{\hskip{1em}}
-\definecommand\qquad{\hskip{2em}}
-
-\definecommand\ { }
-\definecommand\\{\hfill\penalty{-10000}}
-
-\definecommand\bigskipamount{12pt plus 4pt minus 4pt}
-\definecommand\medskipamount{6pt plus 2pt minus 2pt}
-\definecommand\smallskipamount{3pt plus 1pt minus 1pt}
-\definecommand\bigskip{\vskip{\bigskipamount}}
-\definecommand\medskip{\vskip{\medskipamount}}
-\definecommand\smallskip{\vskip{\smallskipamount}}
-
-\definecommand\-{\discretionary*{-}{}{}}
-
-% boxes
-
-\definecommand\llap[m]{\hbox to 0pt{\hss{}#1}}
-\definecommand\rlap[m]{\hbox to 0pt{#1\hss}}
-\definecommand\clap[m]{\hbox to 0pt{\hss{}#1\hss}}
-\definecommand\centerline[m]{\hbox to 110mm{\hskip 0pt plus 1fil{}#1\hskip 0pt plus 1fil}}
-
-\definecommand\raise[mm]{\hbox{\vbox to 0pt{\vss\hbox{#2}\vskip #1}}}
-
-% math
-
-\definecommand\ensuremath[m]{\beginmath #1\endmath}
-\definecommand\ensuretext[m]{\begintext #1\endtext}
-\definecommand\text{\ensuretext}
-
-% symbols
-
-\definecommand\#{\char{35}}
-\definecommand\${\char{36}}
-\definecommand\%{\char{37}}
-\definecommand\textbackslash{\char{92}}
-\definecommand\textlbrace{\char{123}}
-\definecommand\textrbrace{\char{125}}
-\definecommand\ldots{\ensuremath{\mathinner{\ldotp\ldotp\ldotp}}}
-\definecommand\cdots{\ensuremath{\mathinner{\cdotp\cdotp\cdotp}}}
-
-
-% abbreviations for TeX compatibility
-
-\definepattern{'}{\char{0x2019}}    % replace apostrophe with quote
-\definepattern{`}{\char{0x2018}}    % replace grave accent with backquote
-\definepattern{``}{\char{0x201c}}   % replace two grave accents with double left quote
-\definepattern{--}{\char{0x2013}}   % emulate n-dash ligature
-\definepattern{---}{\char{0x2014}}  % emulate m-dash ligature
-\definepattern{‘‘}{\char{0x201c}}   % emulate double-left-quote ligature
-\definepattern{‘‘}{\char{0x201d}}   % emulate double-right-quote ligature
-\definepattern{''}{\char{0x201d}}   % emulate double-right-quote ligature
-
-% colours
-
-\definecommand\black{\setgraycolour{0}}
-\definecommand\red{\setrgbcolour{0.3}{0}{0}}
-\definecommand\blue{\setrgbcolour{0}{0}{0.3}}
+\include{defines.ant}
 
 % expansion
 
@@ -191,135 +115,7 @@
 
 % page layout
 
-\beginALdeclarations
-
-;; page sizes
-
-get_page_size A_3       := (297mm, 420mm);
-get_page_size A_4       := (210mm, 297mm);
-get_page_size A_5       := (148mm, 210mm);
-get_page_size A_6       := (105mm, 148mm);
-get_page_size B_3       := (353mm, 500mm);
-get_page_size B_4       := (250mm, 353mm);
-get_page_size B_5       := (176mm, 250mm);
-get_page_size B_6       := (125mm, 176mm);
-get_page_size Letter    := (8.5in, 11in);
-get_page_size Legal     := (8.5in, 14in);
-get_page_size Executive := (7.25in, 10.5in);
-
-;; predefined layouts
-
-simple_page_layout page_size division baseline :=
-  local begin
-    (paper_width, paper_height) := get_page_size A_4;
-    margin_width  := paper_width / division;
-    margin_height := paper_height / division;
-    text_width    := paper_width  - 3 margin_width;
-    text_height   := paper_height - 3 margin_height;
-    main_galley_params :=
-      { Name       := "main"
-      | TopSkip    := 1em
-      | BottomSkip := 1em
-      | MinSize    := 5em
-      | GridSize   := baseline
-      }
-  end
-  begin
-    ps_new_galley "main" text_width >>
-
-    ps_new_page_layout "right" paper_width paper_height >>
-
-    ps_new_area "text block"
-      margin_width margin_height
-      text_width text_height 10pt 3pt
-      Galley main_galley_params >>
-    ps_new_area "head"
-      margin_width (margin_height - baseline)
-      text_width 0pt 10pt 4pt
-      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\therhead}" >>
-    ps_new_area "foot"
-      margin_width (margin_height + text_height + baseline)
-      text_width 0pt 10pt 4pt
-      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\therfoot}" >>
-
-    ps_new_page_layout "left" paper_width paper_height >>
-
-    ps_new_area "text block"
-      (2margin_width) margin_height
-      text_width text_height 10pt 3pt
-      Galley main_galley_params >>
-    ps_new_area "head"
-      (2margin_width) (margin_height - baseline)
-      text_width 0pt 10pt 4pt
-      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\thelhead}" >>
-    ps_new_area "foot"
-      (2margin_width) (margin_height + text_height + baseline)
-      text_width 0pt 10pt 4pt
-      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\thelfoot}"
-  end;
-
-two_column_page_layout page_size division baseline :=
-  local begin
-    (paper_width, paper_height) := get_page_size A_4;
-    margin_width  := paper_width / division;
-    margin_height := paper_height / division;
-    text_width    := paper_width  - 3 margin_width;
-    text_height   := paper_height - 3 margin_height;
-    column_sep    := 1cm;
-    column_height := text_height;
-    column_width  := _;
-    main_galley_params :=
-      { Name       := "main"
-      | TopSkip    := 1em
-      | BottomSkip := 1em
-      | MinSize    := 5em
-      | GridSize   := baseline
-      }
-  end
-  begin
-    2column_width + column_sep = text_width,
-
-    ps_new_galley "main" text_width >>
-
-    ps_new_page_layout "right" paper_width paper_height >>
-
-    ps_new_area "left column"
-      margin_width margin_height
-      column_width column_height 10pt 3pt
-      Galley main_galley_params >>
-    ps_new_area "right column"
-      (margin_width + column_width + column_sep) margin_height
-      column_width column_height 10pt 3pt
-      Galley main_galley_params >>
-    ps_new_area "head"
-      margin_width (margin_height - baseline)
-      text_width 0pt 10pt 4pt
-      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\therhead}" >>
-    ps_new_area "foot"
-      margin_width (margin_height + text_height + baseline)
-      text_width 0pt 10pt 4pt
-      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\therfoot}" >>
-
-    ps_new_page_layout "left" paper_width paper_height >>
-
-    ps_new_area "left column"
-      (2margin_width) margin_height
-      column_width column_height 10pt 3pt
-      Galley main_galley_params >>
-    ps_new_area "right column"
-      (2margin_width + column_width + column_sep) margin_height
-      column_width column_height 10pt 3pt
-      Galley main_galley_params >>
-    ps_new_area "head"
-      (2margin_width) (margin_height - baseline)
-      text_width 0pt 10pt 4pt
-      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\thelhead}" >>
-    ps_new_area "foot"
-      (2margin_width) (margin_height + text_height + baseline)
-      text_width 0pt 10pt 4pt
-      Direct "\\hbox to (" ++ to_string text_width ++ "pt){\\thelfoot}"
-  end;
-\endALdeclarations
+\include{page-layout.ant}
 
 \definecommand\therhead{\small\sffamily\red ant \version\hfil\lookupreference{new mark: section}}
 \definecommand\therfoot{\hfil\sffamily\red --- \getcounter{1}{page} ---\hfil}
@@ -460,23 +256,6 @@ two_column_page_layout page_size division baseline :=
     ps_shipout_pages 0 "toc-left" "toc-right" >>
     ps_shipout_pages 0 "left"     "right"}%
   \endinput}
-
-% date
-
-\definecommand\year{\getcounter{1}{year}}
-\definecommand\month{\getcounter{s{}{January}{February}{March}{April}{May}{June}{July}{August}{September}{October}{November}{December}}{month}}
-\definecommand\day{\getcounter{1}{day}}
-\definecommand\dayofweek{\getcounter{s{Sunday}{Monday}{Tuesday}{Wednesday}{Thursday}{Friday}{Satureday}}{day-of-week}}
-\definecommand\date{\month\ \day, \year}
-
-% fonts
-
-\definecommand\textit[m]{{\itshape #1}}
-\definecommand\textsc[m]{{\scshape #1}}%\setparameter{font}{ features = {liga,kern,smcp} } #1}}
-\definecommand\textsl[m]{{\slshape #1}}
-\definecommand\texttt[m]{{\ttfamily #1}}
-\definecommand\textsf[m]{{\sffamily #1}}
-\definecommand\emph[m]{\textit{#1}}
 
 % simple lists
 
