format_string and globals

--- a/ant/Examples/manual.sty
+++ b/ant/Examples/manual.sty
@@ -33,7 +33,7 @@
 \definecommand\SelSecondOfThree[mmm]{#2}
 \definecommand\SelThirdOfThree[mmm]{#3}
 
-% The additional empty grous are needed in the case that the argument is no tuple
+% The additional empty groups are needed in the case that the argument is no tuple
 % of the required size.
 \definecommand\SelectFirstOfTwo[x]{\SelFirstOfTwo #1{}{}}
 \definecommand\SelectSecondOfTwo[x]{\SelSecodOfTwo #1{}{}}
