fix a bug with tables

--- a/ant/Examples/manual.sty
+++ b/ant/Examples/manual.sty
@@ -61,7 +61,7 @@
 \definecommand\addspacetotoc[m]{%
   \begin{tocentry}\vskip{#1}\end{tocentry}}
 
-\definecommand\addtotoc[xx]{%
+\definecommand\addtotoc[mm]{%
   \begin{tocentry}%
     \setparameter{paragraph}{ par-indent = 0pt; par-fill-skip = 0pt }%
     \normalfont\normalsize
